feat : menambahkan project dan gambar project

--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
           <div class="col-md-4 mb-3">
             <div class="card">
               <img
-                src="img/projects/cards1.jpg"
+                src="img/projects/project1.png"
                 class="card-img-top"
                 alt="project1"
               />
               <div class="card-body">
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  I make a responsive pricetable website from HTML and CSS that
+                  i learn from CodePolitan Course
                 </p>
               </div>
             </div>
@@ -132,14 +132,14 @@
           <div class="col-md-4 mb-3">
             <div class="card">
               <img
-                src="img/projects/cards2.jpg"
+                src="img/projects/project2.png"
                 class="card-img-top"
                 alt="project1"
               />
               <div class="card-body">
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  I make a responsive website with theme of MUSEUM with
+                  Bootstrap 5 that i learn from CodePolitan Course
                 </p>
               </div>
             </div>
