add : menambahkan atau mengupdate project ke 3 dan 4

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               <img
                 src="img/projects/project2.png"
                 class="card-img-top"
-                alt="project1"
+                alt="project2"
               />
               <div class="card-body">
                 <p class="card-text">
@@ -147,14 +147,15 @@
           <div class="col-md-4 mb-3">
             <div class="card">
               <img
-                src="img/projects/cards3.jpg"
+                src="img/projects/project3.png"
                 class="card-img-top"
-                alt="project1"
+                alt="project3"
               />
               <div class="card-body">
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  I made a Responsive and simple landing page using the
+                  Bootstrap 4 CSS framework that I learned on the CodePolitan
+                  course.
                 </p>
               </div>
             </div>
@@ -162,14 +163,15 @@
           <div class="col-md-4 mb-3">
             <div class="card">
               <img
-                src="img/projects/cards4.jpg"
+                src="img/projects/project4.png"
                 class="card-img-top"
-                alt="project1"
+                alt="project4"
               />
               <div class="card-body">
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  I created a responsive scoreboard website with the
+                  implementation of the Document Object Model (DOM) that I
+                  learned on the CodePolitan course
                 </p>
               </div>
             </div>
