fix : mengupdate dan memperbaiki parfrasa bahasa menjadi English

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <p class="card-text">
                   I made a Responsive and simple landing page using the
                   Bootstrap 4 CSS framework that I learned on the CodePolitan
-                  course.
+                  course
                 </p>
               </div>
             </div>
@@ -214,7 +214,7 @@
           <div class="col-md-6">
             <form>
               <div class="mb-3">
-                <label for="name" class="form-label">Nama Lengkap</label>
+                <label for="name" class="form-label">Your Name</label>
                 <input
                   type="text"
                   class="form-control"
@@ -232,15 +232,15 @@
                 />
               </div>
               <div class="mb-3">
-                <label for="pesan" class="form-label">Pesan</label>
+                <label for="pesan" class="form-label">Message</label>
                 <textarea class="form-control" id="pesan" rows="3"></textarea>
               </div>
-              <button type="submit" class="btn btn-success">Kirim</button>
+              <button type="submit" class="btn btn-success">Send</button>
             </form>
           </div>
         </div>
         <div id="contactMessages" class="mt-4">
-          <h4>Pesan Masuk:</h4>
+          <h4>Incoming Messages:</h4>
           <ul id="messagesList" class="list-group"></ul>
         </div>
       </div>
